fixed the overflowing section

--- a/style.css
+++ b/style.css
@@ -1,218 +1,229 @@
 @import url(../CSS/reset.css);
 @import url(../CSS/Utiles.css);
-
+body {
+  overflow-x: hidden;
+}
 .row-2 {
-    background: url(./IMG/deafults/bookcase-img.jpg.jpg) center no-repeat;
-    background-size: cover;
+  background: url(./IMG/deafults/bookcase-img.jpg.jpg) center no-repeat;
+  background-size: cover;
 }
 
-.in-img-text h1, .in-img-text h3 {
-    color: rgba(255, 255, 255, 0.895);
-    transition: all ease .3s;
+.in-img-text h1,
+.in-img-text h3 {
+  color: rgba(255, 255, 255, 0.895);
+  transition: all ease 0.3s;
 }
 
-.in-img-text h1:hover , .in-img-text h3:hover {
-    color: #dc3545;
+.in-img-text h1:hover,
+.in-img-text h3:hover {
+  color: #dc3545;
 }
 
-
-.nav-bar  {
-    /* height: 4.7rem; */
+.nav-bar {
+  /* height: 4.7rem; */
 }
 
 .nav-bar li {
-    transition: all ease .2s;
-	margin: 1rem 2rem;
-	
+  transition: all ease 0.2s;
+  margin: 1rem 2rem;
 }
-.nav-bar li:hover{
-    transform: translateY(-2px);
-	transition: transform ease 0.35s;
+.nav-bar li:hover {
+  transform: translateY(-2px);
+  transition: transform ease 0.35s;
 }
 
 .nav-bar .categorie:hover {
-    /* height: 5rem; */
-    border-radius: 0 0 .5rem .5rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0 .6rem 1.2rem -.2rem,
-        rgba(0, 0, 0, 0.3) 0 .3rem .7rem -.3rem;
+  /* height: 5rem; */
+  border-radius: 0 0 0.5rem 0.5rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0 0.6rem 1.2rem -0.2rem,
+    rgba(0, 0, 0, 0.3) 0 0.3rem 0.7rem -0.3rem;
 }
 
-.nav-bar a{
-    border-radius: 1rem;
-	text-decoration: none;
-	font-size: 2rem;
-	padding: 1rem 1.5rem;
-    /* line-height: 4.7rem; */
+.nav-bar a {
+  border-radius: 1rem;
+  text-decoration: none;
+  font-size: 2rem;
+  padding: 1rem 1.5rem;
+  /* line-height: 4.7rem; */
 }
 
-.upper-main-body .carousel:hover ,.philosophy-img-pop-up .carousel:hover , .novels-img-pop-up .carousel:hover {
-    filter: brightness(95%);
+.upper-main-body .carousel:hover,
+.philosophy-img-pop-up .carousel:hover,
+.novels-img-pop-up .carousel:hover {
+  filter: brightness(95%);
 }
-
 
 h2 {
-	color: #000;
-	font-size: 2.6rem;
-	font-weight: 300;
-	text-align: center;
-	text-transform: uppercase;
-	position: relative;
-	margin: 3.0rem 0 6.0rem;
+  color: #000;
+  font-size: 2.6rem;
+  font-weight: 300;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  margin: 3rem 0 6rem;
 }
 h2::after {
-	content: "";
-	width: 10.0rem;
-	position: absolute;
-	margin: 0 auto;
-	height: .4rem;
-	border-radius: .1rem;
-	background: #dc3545;
-	left: 0;
-	right: 0;
-	bottom: -2.0rem;
+  content: "";
+  width: 10rem;
+  position: absolute;
+  margin: 0 auto;
+  height: 0.4rem;
+  border-radius: 0.1rem;
+  background: #dc3545;
+  left: 0;
+  right: 0;
+  bottom: -2rem;
 }
 
 .carousel {
-	margin: 5.0rem auto;
-	padding: 0 7.0rem;
+  margin: 1rem 1rem 1rem 1rem;
+  padding: 0 4rem;
+}
+.carouselImage {
+  width: 68vw;
 }
 .carousel .item {
-	color: #747d89;
-	min-height: 32.5rem;
-	text-align: center;
-	overflow: hidden;
+  color: #747d89;
+  min-height: 32.5rem;
+  text-align: center;
+  overflow: hidden;
 }
 .carousel .thumb-wrapper {
-	padding: 2.5rem 1.5rem;
-	background: #fff;
-	border-radius: .6rem;
-	text-align: center;
-	position: relative;
-	box-shadow: 0 .2rem .3rem rgba(0,0,0,0.2);
+  padding: 2.5rem 1.5rem;
+  background: #fff;
+  border-radius: 0.6rem;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.2);
 }
 .carousel .item .img-box {
-	height: 12.0rem;
-	margin-bottom: 2.0rem;
-	width: 100%;
-	position: relative;
+  height: 12rem;
+  margin-bottom: 2rem;
+  width: 100%;
+  position: relative;
 }
-.carousel .item img {	
-	max-width: 100%;
-	max-height: 100%;
-	display: inline-block;
-	position: absolute;
-	bottom: 0;
-	margin: 0 auto;
-	left: 0;
-	right: 0;
+.carousel .item img {
+  max-width: 100%;
+  max-height: 100%;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
 }
 .carousel .item h4 {
-	font-size: 1.8rem;
+  font-size: 1.8rem;
 }
-.carousel .item h4, .carousel .item p, .carousel .item ul {
-	margin-bottom: .5rem;
+.carousel .item h4,
+.carousel .item p,
+.carousel .item ul {
+  margin-bottom: 0.5rem;
 }
 
-.carousel .thumb-content .btn:hover, .carousel .thumb-content .btn:focus {
-	color: #fff;
-	background: #dc3545;
-	box-shadow: none;
+.carousel .thumb-content .btn:hover,
+.carousel .thumb-content .btn:focus {
+  color: #fff;
+  background: #dc3545;
+  box-shadow: none;
 }
 .carousel .thumb-content .btn i {
-	font-size: 1.4rem;
-	font-weight: bold;
-	margin-left: .5rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-left: 0.5rem;
 }
 .carousel .item-price {
-	font-size: 1.3rem;
-	padding: .2rem 0;
+  font-size: 1.3rem;
+  padding: 0.2rem 0;
 }
 .carousel .item-price strike {
-	opacity: 0.7;
-	margin-right: .5rem;
+  opacity: 0.7;
+  margin-right: 0.5rem;
 }
-.carousel-control-prev, .carousel-control-next {
-	height: 4.4rem;
-	width: 4.0rem;
-	background: #dc3545;	
-	margin: auto 0;
-	border-radius: .4rem;
-	opacity: 0.8;
+.carousel-control-prev,
+.carousel-control-next {
+  height: 4.4rem;
+  width: 4rem;
+  background: #dc3545;
+  margin: auto 0;
+  border-radius: 0.4rem;
+  opacity: 0.8;
 }
-.carousel-control-prev:hover, .carousel-control-next:hover {
-	background: #dc3545;
-	opacity: 1;
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+  background: #dc3545;
+  opacity: 1;
 }
-.carousel-control-prev i, .carousel-control-next i {
-	font-size: 3.6rem;
-	position: absolute;
-	top: 50%;
-	display: inline-block;
-	margin: -1.9rem 0 0 0;
-	z-index: 5;
-	left: 0;
-	right: 0;
-	color: #fff;
-	text-shadow: none;
-	font-weight: bold;
+.carousel-control-prev i,
+.carousel-control-next i {
+  font-size: 3.6rem;
+  position: absolute;
+  top: 50%;
+  display: inline-block;
+  margin: -1.9rem 0 0 0;
+  z-index: 5;
+  left: 0;
+  right: 0;
+  color: #fff;
+  text-shadow: none;
+  font-weight: bold;
 }
 .carousel-control-prev i {
-	margin-left: -.2rem;
+  margin-left: -0.2rem;
 }
 .carousel-control-next i {
-	margin-right: -.4rem;
-}		
+  margin-right: -0.4rem;
+}
 .carousel-indicators {
-	bottom: -5.0rem;
+  bottom: -5rem;
 }
-.carousel-indicators li, .carousel-indicators li.active {
-	width: 1.0rem;
-	height: 1.0rem;
-	margin: .4rem;
-	border-radius: 50%;
-	border: none;
+.carousel-indicators li,
+.carousel-indicators li.active {
+  width: 1rem;
+  height: 1rem;
+  margin: 0.4rem;
+  border-radius: 50%;
+  border: none;
 }
-.carousel-indicators li {	
-	background: rgba(0, 0, 0, 0.2);
+.carousel-indicators li {
+  background: rgba(0, 0, 0, 0.2);
 }
-.carousel-indicators li.active {	
-	background: rgba(0, 0, 0, 0.6);
+.carousel-indicators li.active {
+  background: rgba(0, 0, 0, 0.6);
 }
 .star-rating li {
-	padding: 0;
+  padding: 0;
 }
 .star-rating i {
-	font-size: 1.4rem;
-	color: #ffc000;
+  font-size: 1.4rem;
+  color: #ffc000;
 }
-
-.book-name {
-	min-height: 4.5rem;
+main .book-name {
+  min-height: 4.5rem;
 }
 
 .second-navbar-bi-list-clicked {
-	z-index: 1;
-	transition: all ease .5s;
-	top: -40rem;
+  z-index: 1;
+  transition: all ease 0.5s;
+  top: -40rem;
 }
-.my-5 .container{
-    background-color:#cc3444;
-    width: 100%;
-}
-
-.footer-container{
-    width: 100%;
+.my-5 .container {
+  background-color: #cc3444;
+  width: 100%;
 }
 
-.container{
-    background-color: #FFF;
-    max-width: 100%;
+.footer-container {
+  width: 100%;
 }
-.my-5{
-    background-color:#cc3444;
-	
-  }
-.space{
-    height: 230px;
-    background-color: #cc3444;
+
+.container {
+  background-color: #fff;
+  max-width: 100%;
+}
+.my-5 {
+  background-color: #cc3444;
+}
+.space {
+  height: 230px;
+  background-color: #cc3444;
 }
